// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/action_button/ActionButton with danger style should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor="#d24b4e"
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton with default style should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor="#3f4350"
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton with default style with hasVoted should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor="#3f4350"
  isVoted={true}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton with invalid style should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor={null}
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton with invalid theme should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor={null}
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton with primary style should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  hexColor="#1c58d9"
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton without style should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton without style with hasVoted should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  isVoted={true}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;

exports[`components/action_button/ActionButton without style with invalid theme should match snapshot 1`] = `
<styled.button
  className="btn btn-sm"
  data-action-id="action_id1"
  isVoted={false}
  key="action_id1"
  onClick={[Function]}
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</styled.button>
`;
